syntax = "proto3";

option csharp_namespace = "GrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc Transfer(FileRequest) returns (FileResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message FileRequest {
	bytes file=1;
	string fileType=2;
}

message FileResponse {
	bool message=1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
